--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,16 +13,15 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: build
+      if: always()
       run: |
-        sudo apt update && sudo apt install libfuse2
-        git clone https://github.com/ivan-hc/Boxes-appimage.git
-        cd Boxes-appimage
-        chmod a+x appimagen build.sh
-        ./build.sh
-        cd ..
-        version=$(wget -q https://packages.debian.org/en/testing/gnome-boxes -O - | grep "Package:" | head -1 | cut -c 27- | rev | cut -c 2- | rev)
+        sudo apt update
+        sudo apt install libfuse2
+        wget https://raw.githubusercontent.com/ivan-hc/Boxes-appimage/main/gnome-boxes-junest.sh
+        chmod a+x ./gnome-boxes-junest.sh
+        ./gnome-boxes-junest.sh
         mkdir dist
-        mv Boxes-appimage/*AppImage dist/Boxes-$version-x86_64.AppImage
+        mv *AppImage dist/
 
     - name: Upload artifact
       uses: actions/upload-artifact@v1.0.0
