--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,7 +26,7 @@ jobs:
         mv ./conty.sh tmp/"$APP".AppDir/ || exit 1
         ./"$APP"-conty-builder.sh
         mkdir dist
-        mv *AppImage dist/
+        mv *AppImage* dist/
     - name: Upload artifact
       uses: actions/upload-artifact@v4.4.0
       with:
@@ -51,5 +51,5 @@ jobs:
             prerelease: false
             draft: false
             files: |
-              *.AppImage
+              *.AppImage*
             repo_token: ${{ secrets.GITHUB_TOKEN }}
