--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,11 +1,11 @@
-name: Release Boxes Appimage
+name: Gnome Boxes Appimage
 concurrency:
   group: build-${{ github.ref }}
   cancel-in-progress: true
 
 on:
   schedule:
-    - cron: "0 14 * * 3"
+    - cron: "0 14 * * 0"
   workflow_dispatch:
 
 jobs:
@@ -15,19 +15,16 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: build
+      if: always()
       run: |
-        APP=gnome-boxes
-        sudo apt update && sudo apt install libfuse2 desktop-file-utils
-        wget -q https://raw.githubusercontent.com/ivan-hc/Conty/master/create-conty.sh
-        wget -q https://raw.githubusercontent.com/ivan-hc/Conty/master/conty-start.sh
-        wget -q https://github.com/ivan-hc/Conty/releases/download/utils/utils_dwarfs.tar.gz
-        chmod +x create-arch-bootstrap.sh create-conty.sh "$APP"-conty-builder.sh
-        sudo ./create-arch-bootstrap.sh && ./create-conty.sh
-        mkdir -p tmp/"$APP".AppDir
-        mv ./conty.sh tmp/"$APP".AppDir/ || exit 1
-        ./"$APP"-conty-builder.sh
+        sudo apt update
+        sudo apt install libfuse2 desktop-file-utils
+        wget https://raw.githubusercontent.com/ivan-hc/Boxes-appimage/main/gnome-boxes-junest.sh
+        chmod a+x ./gnome-boxes-junest.sh
+        ./gnome-boxes-junest.sh
         mkdir dist
-        mv *AppImage* dist/
+        mv *AppImage dist/
+
     - name: Upload artifact
       uses: actions/upload-artifact@v4.4.0
       with:
