--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,8 +18,7 @@ jobs:
       if: always()
       run: |
         sudo apt update
-        sudo apt install libfuse2 desktop-file-utils
-        wget https://raw.githubusercontent.com/ivan-hc/Boxes-appimage/main/gnome-boxes-junest.sh
+        sudo apt install desktop-file-utils
         chmod a+x ./gnome-boxes-junest.sh
         ./gnome-boxes-junest.sh
         mkdir dist
